# telic

./: .gitignore  Cargo.toml  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/arena/: agent.rs  command_tree.rs  game.rs  mod.rs  multiplayer.rs
crates/core/src/planning/: action.rs  agent.rs  belief.rs  goal.rs  htn.rs  mod.rs  planner.rs  utility.rs
crates/core/tests/: planning_tests.rs  utility_tests.rs
crates/examples/arena_combat/: Cargo.toml
crates/examples/arena_combat/src/: lib.rs  main.rs  viewer.rs
crates/examples/arena_combat/src/ai/: flanker_agent.rs  focus_fire_agent.rs  kite_agent.rs  mod.rs  random_agent.rs  rush_agent.rs  utility_agent.rs
crates/examples/arena_combat/src/game/: commands.rs  mod.rs  state.rs  types.rs
crates/examples/love_letter/: Cargo.toml
crates/examples/love_letter/src/: main.rs
crates/examples/love_letter/src/ai/: mod.rs  random_agent.rs  smart_agent.rs  smart_v2.rs  tree_helpers.rs  utility_agent.rs
crates/examples/love_letter/src/game/: commands.rs  mod.rs  state.rs  types.rs
crates/examples/poker/: Cargo.toml
crates/examples/poker/src/: main.rs
crates/examples/poker/tests/: smoke.rs
crates/examples/simple_wars/: Cargo.toml
crates/examples/simple_wars/src/: main.rs
crates/examples/simple_wars/tests/: assignment_strategies.rs  command_tree.rs
crates/examples/splendor/: Cargo.toml
crates/examples/splendor/src/: main.rs
docs/: architecture.md  command_tree.md  findings.md  guide.md
(+38 files in other folders)
